# werk-nu

./: README.md
accept/: .gitignore  pyproject.toml
accept/src/accept/: cli.py
accept/src/accept/domain/: applicant.py  employer.py  user.py
accept/src/accept/drivers/: __init__.py  http.py
accept/src/accept/drivers/selenium/: __init__.py  brower.py
accept/src/accept/mocks/: mail.py
accept/src/domain/: app.py  applicant.py  application.py  employer.py  mail.py  users.py  vacancy.py
accept/tests/: conftest.py  driver_factory.py  storyteller.py  test_auth.py  test_basic.py
backend/: pyproject.toml
backend/src/api/: database.py  dependencies.py  deps.py  main.py  schemas.py  tables.py
backend/src/api/dependencies/: message.py  organization.py  user.py  vacancy.py
backend/src/api/queries/: organization.py  user.py
backend/src/api/routes/: applications.py  auth.py  organizations.py  users.py  vacancies.py
backend/src/api/schemas/: applicant.py  auth.py  message.py  organization.py  token.py  user.py  vacancy.py
backend/src/api/services/: auth.py  mail.py  message.py  organization.py  user.py  vacancy.py
backend/src/auth/: auth.py  config.py
backend/src/backend/: cli.py  config.py  database.py  dependencies.py  main.py  repository.py  tables.py
backend/src/backend/queries/: organization.py  user.py
backend/src/backend/routes/: applications.py  auth.py  organizations.py  users.py  vacancies.py
backend/src/backend/schemas/: applicant.py  auth.py  organization.py  user.py  vacancy.py
backend/src/backend/services/: auth.py  message.py  organization.py  user.py  vacancy.py
backend/src/cli/: main.py
backend/src/client/: __init__.py  client.py
backend/tests/: conftest.py  test_auth.py  test_message.py  test_repository.py  test_user.py  test_vacancy.py
backend/tests/mocks/: mail.py
backend/tests/vacancy/: test_service.py
design/: wireframe.html
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  client.ts  vacancy.ts
frontend/src/layout/: Topbar.vue
frontend/src/router/: index.ts
(+22 files in other folders)
