[project]
name = "backend"
version = "0.1.0"
description = "Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
backend = "cli.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"