[project]
name = "backend"
version = "0.1.0"
description = "Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.47",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
backend = "backend.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
client = [
    "httpx>=0.28.1",
]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
]
